Bug 75460 - UI: Autoscroll using middle mouse button doesn't work when enabled since 4.1.
Summary: UI: Autoscroll using middle mouse button doesn't work when enabled since 4.1.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.0.beta1
Hardware: Other All
: high normal
Assignee: Michael Stahl
URL:
Whiteboard: target:4.3.0 target:4.2.3 target:4.1.6
Keywords: regression
: 75836 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-02-24 18:26 UTC by helgalo94
Modified: 2014-08-12 17:35 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description helgalo94 2014-02-24 18:26:19 UTC
Problem description: 
This only effects Writer. Calc works without issue. I have enabled autsoscroll in options, and I cannot middle click to autoscroll. Other applications in the LO suite and other applications like Firefox work without issue. I'm on Ubuntu 13.10, using the supplied builds from https://launchpad.net/~libreoffice/+archive/ppa to run into this issue. It would also be helpful if people using 4.2 on Windows and those using official Linux builds from the LO website tested this. To see if the issue is specific to Ubuntu or Linux, or if it affects every platform. 
Steps to reproduce:
1. Enable autoscroll via Tools > Options > LibreOffice > View > Mouse, and set Middle Mouse button to "Automatic Scrolling"
2. Click OK.
3. Try middle clicking on a document in Writer and see if autoscroll works. In my case it doesn't.

Current behavior:

Expected behavior:

              
Operating System: Ubuntu
Version: 4.2.0.4 release
Last worked in: 4.1.4.2 release
Comment 1 helgalo94 2014-02-24 18:31:25 UTC
Sorry. Forgot to add the last two fields:

Current behavior:
Autoscroll wheel does not appear nor does autoscrolling work.
Expected behavior:
It should appear and work.
Comment 2 Jean-Baptiste Faure 2014-03-01 22:02:25 UTC
Reproducible with dev version 4.2.3.0.0+ and with version 4.1.5 under Linux / Ubuntu 13.10 x86-64
It works as expected in version 4.0.6, so set regression keyword.

Best regards. JBF
Comment 3 Jean-Baptiste Faure 2014-03-08 22:00:23 UTC
*** Bug 75836 has been marked as a duplicate of this bug. ***
Comment 4 Mike Kaganski 2014-03-08 22:54:33 UTC
OS->All
Version->4.1.0.0.beta1 (see bug 75836)
Comment 5 Mike Kaganski 2014-03-08 23:07:50 UTC
Adjusting priority (regression).
Also, adjusting summary (VIEWING->UI: see https://wiki.documentfoundation.org/QA/Bugzilla/Components)
Comment 6 Michael Stahl 2014-03-14 21:17:03 UTC
regression from this commit, which actually makes it crash:

commit 8880c773e779710dc0a08760e92afd709a73ca31
Author:     Ruslan Kabatsayev <b7.10110111@gmail.com>
AuthorDate: Thu Feb 7 21:09:59 2013 +0400
Commit:     Caolán McNamara <caolanm@redhat.com>
CommitDate: Fri Feb 8 12:16:49 2013 +0000

    Resolves: fdo#43650 Disable tooltip when scrolling writer docs via mouse wheel
Comment 7 Commit Notification 2014-03-14 22:32:47 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6795b251e2011cae945c6bb903de8053953b5e30

fdo#75460: sw: fix AutoScroll



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Michael Stahl 2014-03-14 22:33:17 UTC
so commit 5141201fba2d080841b81e02be92f4b47aae2684 fixed the crash...

problem is that "m_pEditWin->HandleScrollCommand" is no longer called,
and that handles the AutoScroll mode... i'd like to move that line
up to the "early return" but actually in the case where we have a COMMAND_WHEEL_SCROLL that is not a SAL_WHEELMOUSE_EVENT_PAGESCROLL
we need to call that as well ... so i had to revert that patch
even though it seemed quite nice :-/
Comment 9 Commit Notification 2014-03-17 11:23:17 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6857a266c5e8037f097ed7e727671f7da543f178&h=libreoffice-4-2

fdo#75460: sw: fix AutoScroll


It will be available in LibreOffice 4.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2014-03-19 10:23:13 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a0e94c5ce7dc2ad00d48cd9c0681c044bd0f96d1&h=libreoffice-4-2-3

fdo#75460: sw: fix AutoScroll


It will be available already in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2014-03-19 10:29:20 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=715cb73a20bbe9db6406a863201370996c04c1b7&h=libreoffice-4-1

fdo#75460: sw: fix AutoScroll


It will be available in LibreOffice 4.1.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 helgalo94 2014-04-21 14:31:22 UTC
It's fixed alright. On bothh my Ubuntu installs. Thanks for being so prompt to resolve my issue, community! I'll think about that next time I'm donating. (-:
Comment 13 tkman26 2014-08-06 15:16:45 UTC
I believe this bug is back.  
I just updated to 4.2.5.2 yesterday and immediately my center mouse scroll wheel stopped working.
My platform is Windows 7 and I only see this problem in libreOffice Writer.
Comment 14 Michael Stahl 2014-08-12 17:35:13 UTC
tkman26, please file a *new* bug for this.

i've just checked on Linux and middle mouse button AutoScroll
is working fine on current master, libreoffice-4-3 and
libreoffice-4-2 branches; the original bug definitely
affected Linux so whatever you are seeing must be a different
bug and needs to be triaged by QA.