fdo#75460: sw: fix AutoScroll

This reverts commit 5141201fba2d080841b81e02be92f4b47aae2684. which
fixed a crash but unfortunately also prevents the
m_pEditWin->HandleScrollCommand from being called, thus disabling
AutoScroll.  Fix the crash in the ugly way by another pWData check.

(regression from 8880c773e779710dc0a08760e92afd709a73ca31)

(cherry picked from commit 6795b251e2011cae945c6bb903de8053953b5e30)

Conflicts:
	sw/source/ui/uiview/viewport.cxx

Change-Id: I958f1403ad23d0c0631eca5dbbef977a9ca1210d
Reviewed-on: https://gerrit.libreoffice.org/8597
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>