sw/source/ui/uiview/viewport.cxx
@@ -1253,14 +1253,9 @@ void SwView::Move()
 
 sal_Bool SwView::HandleWheelCommands( const CommandEvent& rCEvt )
 {
-    const CommandWheelData* pWData = rCEvt.GetWheelData();
-    if (!pWData)
-    {
-        return sal_False;
-    }
-
     sal_Bool bOk = sal_False;
-    if( COMMAND_WHEEL_ZOOM == pWData->GetMode() )
+    const CommandWheelData* pWData = rCEvt.GetWheelData();
+    if (pWData && COMMAND_WHEEL_ZOOM == pWData->GetMode())
     {
         long nFact = m_pWrtShell->GetViewOptions()->GetZoom();
         if( 0L > pWData->GetDelta() )
@@ -1271,7 +1266,7 @@ sal_Bool SwView::HandleWheelCommands( const CommandEvent& rCEvt )
         SetZoom( SVX_ZOOM_PERCENT, nFact );
         bOk = sal_True;
     }
-    else if( COMMAND_WHEEL_ZOOM_SCALE == pWData->GetMode() )
+    else if (pWData && COMMAND_WHEEL_ZOOM_SCALE == pWData->GetMode())
     {
         int newZoom = 100 * (m_pWrtShell->GetViewOptions()->GetZoom() / 100.0) * (pWData->GetDelta() / 100.0);
         SetZoom( SVX_ZOOM_PERCENT, std::max( 20, std::min( 600, newZoom ) ) );
@@ -1279,13 +1274,13 @@ sal_Bool SwView::HandleWheelCommands( const CommandEvent& rCEvt )
     }
     else
     {
-        if(pWData->GetMode()==COMMAND_WHEEL_SCROLL)
+        if (pWData && pWData->GetMode()==COMMAND_WHEEL_SCROLL)
         {
             // This influences whether quick help is shown
             m_bWheelScrollInProgress=true;
         }
 
-        if ((COMMAND_WHEEL_SCROLL==pWData->GetMode()) && (((sal_uLong)0xFFFFFFFF) == pWData->GetScrollLines()))
+        if (pWData && (COMMAND_WHEEL_SCROLL==pWData->GetMode()) && (((sal_uLong)0xFFFFFFFF) == pWData->GetScrollLines()))
         {
             if (pWData->GetDelta()<0)
                 PhyPageDown();
